src/objects/LegalEntity__c.object
<CustomObject>
    <description>JIRA : SFDC1-131 , This holds Legal Entity related to Products</description>
    <fields>
        <fullName>AddressLine1__c</fullName>
        <label>Address Line 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AddressLine2__c</fullName>
        <label>Address Line 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AddressLine3__c</fullName>
        <label>Address Line 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-5806 : This field will hold the lookup to Country Object on Legal Entity</description>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Legal Entities (Country)</relationshipLabel>
        <relationshipName>LegalEntities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentIPText__c</fullName>
        <label>Current IP Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EligibleforContinuation__c</fullName>
        <description>SFDC1-8054 :  Legal Entity Picklist to include or exclude particular Contract Record type</description>
        <inlineHelpText>If this legal entity is eligible for master agreement contract record types ? Yes/No</inlineHelpText>
        <label>Eligible for Continuation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EligibleforDPA__c</fullName>
        <description>SFDC1-8054 :  Legal Entity Picklist to include or exclude particular Contract Record type</description>
        <inlineHelpText>If this legal entity is eligible for master agreement contract record types ? Yes/No</inlineHelpText>
        <label>Eligible for DPA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EligibleforMangedServiceTerms__c</fullName>
        <description>SFDC1-8054 :  Legal Entity Picklist to be include or exclude particular Contract Record type</description>
        <inlineHelpText>If this legal entity is eligible for master agreement contract record types ? Yes/No</inlineHelpText>
        <label>Eligible for Manged Service Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EligibleforMasterAgreement__c</fullName>
        <description>SFDC1-8054 :  Legal Entity Picklist to be include or exclude particular Contract Record type</description>
        <inlineHelpText>If this legal entity is eligible for master agreement contract record types ? Yes/No</inlineHelpText>
        <label>Eligible for Master Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EligibleforOrderForm__c</fullName>
        <description>SFDC1-8054 :  Legal Entity Picklist to be include or exclude particular Contract Record type</description>
        <inlineHelpText>If this legal entity is eligible for master agreement contract record types ? Yes/No</inlineHelpText>
        <label>Eligible for Order Form</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EligibleforStatementofWork__c</fullName>
        <description>SFDC1-8054 :  Legal Entity Picklist to include or exclude particular Contract Record type</description>
        <inlineHelpText>If this legal entity is eligible for master agreement contract record types ? Yes/No</inlineHelpText>
        <label>Eligible for Consulting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EligibleforTrial__c</fullName>
        <description>SFDC1-8054 :  Legal Entity Picklist to include or exclude particular Contract Record type</description>
        <inlineHelpText>If this legal entity is eligible for master agreement contract record types ? Yes/No</inlineHelpText>
        <label>Eligible for Trial</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GoverningLawJurisdiction__c</fullName>
        <description>SFDC1-9150:This can cascade to the contract object to be used on the external trial and order form documents the customer signs.</description>
        <inlineHelpText>Select the Governing Jurisdiction</inlineHelpText>
        <label>Governing Law Jurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alberta</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IncorporatedinCountry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-5202 Incorporated In Country field for Legal Entity object</description>
        <label>Incorporated in Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Legal Entities</relationshipLabel>
        <relationshipName>Legal_Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IncorporatedinState__c</fullName>
        <description>SFDC1-5202 Incorporated In State field for Legal Entity object</description>
        <label>Incorporated in State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>UnitedStatesPicklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-2445 : Legacy ID field for Legal Entity Object</description>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegalEntityText__c</fullName>
        <label>Legal Entity Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PKIDLegalEnt__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>LlE{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID LegalEnt</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResidualCourts__c</fullName>
        <description>SFDC1-9150:This can cascade to the contract object to be used on the external trial and order form documents the customer signs.</description>
        <inlineHelpText>Select the Residual Court</inlineHelpText>
        <label>Residual Courts</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>The Province of Alberta</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>England and Wales</fullName>
                </value>
                <value>
                    <fullName>The State of New York</fullName>
                </value>
                <value>
                    <fullName>England and Whales</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StateOrProvinceNew__c</fullName>
        <description>SFDC1-8096 State picklist with values coming from global picklist</description>
        <inlineHelpText>Populate this field if country is United States</inlineHelpText>
        <label>State or Province</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>UnitedStatesPicklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>StateOrProvince__c</fullName>
        <label>State or Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Legal Entity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legal Entities</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>